@@ -1862,6 +1862,10 @@
 
 	* Added NPCs for John's jump quests and Chrishrama in Sleepywood.
 
+2012-08-10  GoldenKevin  (revision 116)
+
+	* Added rest of Sleepywood area NPCs.
+
 Copyright 2011-2012 GoldenKevin
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
